<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6BBC0"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/pets2"
        android:layout_width="374dp"
        android:layout_height="133dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/p1"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintTop_toTopOf="@id/pet2" />

    <TextView
        android:id="@+id/pets4"
        android:layout_width="374dp"
        android:layout_height="133dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/p4"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pets2" />

    <TextView
        android:id="@+id/pets5"
        android:layout_width="374dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:text="@string/p5"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/pets4" />

    <TextView
        android:id="@+id/pet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/AboutOurApp"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>