<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6BBC0"
    tools:context=".Profile">

    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:ems="15"
        android:textSize="28sp"
        android:hint="@string/name"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/interestQuestion"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="220dp"
        android:text="What pets are you interested in?"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/dog"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Dog"
        android:textSize="20dp"
        android:layout_below="@id/name"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/interestQuestion"/>

    <CheckBox
        android:id="@+id/cat"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Cat"
        android:textSize="20dp"
        android:layout_below="@id/name"
        android:layout_marginStart="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/interestQuestion"/>

    <CheckBox
        android:id="@+id/bird"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Bird"
        android:textSize="20dp"
        android:layout_below="@id/name"
        android:layout_marginStart="230dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/interestQuestion"/>

    <CheckBox
        android:id="@+id/hamster"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Hamster"
        android:textSize="20dp"
        android:layout_below="@id/name"
        android:layout_marginStart="330dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/interestQuestion"/>

    <CheckBox
        android:id="@+id/fish"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Fish"
        android:textSize="20dp"
        android:layout_below="@id/name"
        android:layout_marginStart="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/interestQuestion"/>

    <TextView
        android:id="@+id/sqftQuestion"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="320dp"
        android:text="What is your liveable sqft?"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sqft"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_baseline_home_24"
        android:ems="8"
        android:hint="@string/sqft"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/sqftQuestion"
        app:layout_constraintBaseline_toBaselineOf="@+id/sqftQuestion" />

    <TextView
        android:id="@+id/budgetQuestion"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="380dp"
        android:text="What is your monthly budget?"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/budget"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_baseline_attach_money_24"
        android:ems="8"
        android:textSize="20sp"
        android:hint="@string/budget"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toEndOf="@+id/budgetQuestion"
        app:layout_constraintBaseline_toBaselineOf="@+id/budgetQuestion" />


    <TextView
        android:id="@+id/ageQuestion"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="440dp"
        android:text="What is your current age?"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/age"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_baseline_access_alarm_24"
        android:ems="8"
        android:hint="@string/age"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/ageQuestion"
        app:layout_constraintBaseline_toBaselineOf="@+id/ageQuestion" />

    <TextView
        android:id="@+id/sizeQuestion"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="500dp"
        android:text="How many people live in your household?"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/householdSize"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_baseline_home_24"
        android:ems="8"
        android:hint="@string/householdSize"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/sizeQuestion"
        app:layout_constraintBottom_toBottomOf="@id/sizeQuestion" />

    <TextView
        android:id="@+id/timeQuestion"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="590dp"
        android:text="How much time do you spend at home per day?"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/timeAtHome"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_baseline_access_alarm_24"
        android:ems="8"
        android:hint="@string/time"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/timeQuestion"
        app:layout_constraintBottom_toBottomOf="@id/timeQuestion"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="150dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="740dp"
        android:backgroundTint="#402243"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
